Fix reference logo alignment

--- a/content/themes/dude/sass/views/_reference.scss
+++ b/content/themes/dude/sass/views/_reference.scss
@@ -179,6 +179,7 @@
           @media (min-width: $container-mobile) {
             display: flex;
             align-items: center;
+            justify-content: flex-end;
           }
 
           svg {
